add video details in form hidden inputs and changes in index.js file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,8 +43,9 @@
               <%= videoTime %>
             </p>
             <input type="hidden" name="url" value="<%= url %>" />
+            <input type="hidden" name="title" value="<%= videoData.player_response.videoDetails.title %>" />
             <div class="downfun dispweb"> <button class="btn-action" type="submit">Download</button>
-              <div class="select-box"><select id="formatSelect">
+              <div class="select-box"><select id="format" name="format">
 
                   <% if (videoData && videoData.player_response && videoData.player_response.streamingData &&
                     videoData.player_response.streamingData.adaptiveFormats) { %>
