--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,12 @@
 
 <head>
   <title>
-    <%= title %>
+    Download You Tube Videos
   </title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" />
+  <meta property="og:title" content="Youtube Video Downloader - Download YouTube Videos" />
+  <meta property="og:description" content="Download YouTube videos" />
 </head>
 
 <body>
@@ -14,7 +16,6 @@
     <%= title %>
   </h1> -->
   <!-- <p>Welcome to <%= title %></p> -->
-
   <div class="ftco-section center">
     <div class="container">
       <p>Download YouTube videos</p>
@@ -23,45 +24,47 @@
           placeholder="Enter video url" required autofocus>
         <button id="submit" class="btn-red" type="submit">Add Video Link</button>
       </form>
-    </div>
 
-    <div id="content-wrapper" class="wapper">
-      <% if (videoData && videoData.player_response) { %>
-        <% var miliseconds=videoData.player_response.streamingData.formats[0].approxDurationMs; var
-          minutes=Math.floor(miliseconds / 60000); var seconds=((miliseconds % 60000) / 1000).toFixed(0); const
-          videoTime=minutes + ":" + (seconds < 10 ? '0' : '' ) + seconds; %>
-          <form id="main-form" class="search-form relative" action="download" method="POST" role="download">
-          <div class="thumbnail clearfix mt-5"><input type="hidden" id="video_id" value="HYUpNJJELeE">
-            <img
-              src="<%= videoData.player_response.videoDetails.thumbnail.thumbnails[videoData.player_response.videoDetails.thumbnail.thumbnails.length - 1].url %>"
-              width="300px" height="250px" alt="9Convert youtube downloader" style="width: 100%; height: 100%">
-            <h2><a href="javascript:void(0);">
-                <%= videoData.player_response.videoDetails.title %>
-              </a>
-            </h2>
-            <p class="time">
-              <%= videoTime %>
-            </p>
-            <input type="hidden" name="url" value="<%= url %>" />
-            <input type="hidden" name="title" value="<%= videoData.player_response.videoDetails.title %>" />
-            <input type="hidden" name="videoId" value="<%= videoData.player_response.videoDetails.videoId %>" />
-            <div class="downfun dispweb"> <button class="btn-action" type="submit">Download</button>
-              <div class="select-box"><select id="format" name="format">
 
-                  <% if (videoData && videoData.player_response && videoData.player_response.streamingData &&
-                    videoData.player_response.streamingData.adaptiveFormats) { %>
+      <div id="content-wrapper" class="wapper">
+        <% if (videoData && videoData.player_response) { %>
+          <% var miliseconds=videoData.player_response.streamingData.formats[0].approxDurationMs; var
+            minutes=Math.floor(miliseconds / 60000); var seconds=((miliseconds % 60000) / 1000).toFixed(0); const
+            videoTime=minutes + ":" + (seconds < 10 ? '0' : '' ) + seconds; %>
+            <form id="main-form" class="search-form relative" action="download" method="POST" role="download">
+              <div class="thumbnail clearfix mt-5"><input type="hidden" id="video_id" value="HYUpNJJELeE">
+                <img
+                  src="<%= videoData.player_response.videoDetails.thumbnail.thumbnails[videoData.player_response.videoDetails.thumbnail.thumbnails.length - 1].url %>"
+                  width="300px" height="250px" alt="9Convert youtube downloader" style="width: 100%; height: 100%">
+                <h2><a href="javascript:void(0);">
+                    <%= videoData.player_response.videoDetails.title %>
+                  </a>
+                </h2>
+                <p class="time">
+                  <%= videoTime %>
+                </p>
+                <input type="hidden" name="url" value="<%= url %>" />
+                <input type="hidden" name="title" value="<%= videoData.player_response.videoDetails.title %>" />
+                <input type="hidden" name="videoId" value="<%= videoData.player_response.videoDetails.videoId %>" />
+                <div class="downfun dispweb"> <button class="btn-action" type="submit">Download</button>
+                  <div class="select-box"><select id="format" name="format">
 
-                    <% for(var i=0; i < videoData.player_response.streamingData.adaptiveFormats.length; i++) {%>
-                      <% if (!videoData.player_response.streamingData.adaptiveFormats[i].mimeType.includes('audio')) {%>
-                      <option value="<%= JSON.stringify(videoData.player_response.streamingData.adaptiveFormats[i]) %>">
-                        <%= videoData.player_response.streamingData.adaptiveFormats[i].qualityLabel%>
-                          <%= videoData.player_response.streamingData.adaptiveFormats[i].mimeType%>
-                      </option>
-                      <% } %>
-                      <% } %>
-                        <% } %>
+                      <% if (videoData && videoData.player_response && videoData.player_response.streamingData &&
+                        videoData.player_response.streamingData.adaptiveFormats) { %>
 
-                          <!-- <optgroup label="mp4">
+                        <% for(var i=0; i < videoData.player_response.streamingData.adaptiveFormats.length; i++) {%>
+                          <% if (!videoData.player_response.streamingData.adaptiveFormats[i].mimeType.includes('audio'))
+                            {%>
+                            <option
+                              value="<%= JSON.stringify(videoData.player_response.streamingData.adaptiveFormats[i]) %>">
+                              <%= videoData.player_response.streamingData.adaptiveFormats[i].qualityLabel%>
+                                <%= videoData.player_response.streamingData.adaptiveFormats[i].mimeType%>
+                            </option>
+                            <% } %>
+                              <% } %>
+                                <% } %>
+
+                                  <!-- <optgroup label="mp4">
                 <option
                   value="0LOyAxbbJ+igRoiCCcFoyxdnPRF1HVvL5l7v2cUErI+d3DCARO3j/2ySOzyAmbYwqRemjFL7DYFQ27t8rrf21g==">MP4
                   auto quality </option>
@@ -91,13 +94,22 @@
                 <option value="0LOyAxbbJ+igRoiCCcFoyxdnPRF1HVvL5l7v3sVU68OOkTCBWvHi+XeOOj+ehbY1shu3ilfnFY9GxrFrsbX9">
                   128kbps (3 MB) </option>
               </optgroup> -->
-                </select></div>
-            </div>
-          </div>
-          </form>
-          <% } %>
+                    </select></div>
+                </div>
+              </div>
+            </form>
+            <% } %>
 
+      </div>
     </div>
+    
+    <footer>
+      <div class="copyright">
+        <ul class="flex flex-a-i-center">
+          <li>Developed By Ashish K</li>
+        </ul>
+      </div>
+    </footer>
 </body>
 
 </html>
