add read me file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
       <form id="main-form" class="search-form relative" method="POST" role="search">
         <input id="url" type="enter video url" name="url" class="search__input" aria-label="Search"
           placeholder="Enter video url" required autofocus>
-        <button id="submit" class="btn-red" type="submit">Add Video Link</button>
+        <button id="submit" class="btn-red" type="submit">Click Me</button>
       </form>
 
 
