add ffmpeg modules working on hd videos download features

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,6 +45,7 @@
                 <input type="hidden" name="url" value="<%= url %>" />
                 <input type="hidden" name="title" value="<%= videoData.player_response.videoDetails.title %>" />
                 <input type="hidden" name="videoId" value="<%= videoData.player_response.videoDetails.videoId %>" />
+                <input type="hidden" name="audioTag" value="<%= audio %>" />
                 <div class="downfun dispweb"> <button class="btn-action" type="submit">Download</button>
                   <div class="select-box"><select id="format" name="format">
                       <!-- <% if (videoData && videoData.player_response && videoData.player_response.streamingData &&
