add hd videos download route, youtube package update, changes in ejs file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,8 +95,9 @@
     
     <footer>
       <div class="copyright">
-        <ul class="flex flex-a-i-center">
+        <ul class="">
           <li>Developed By Ashish K</li>
+          <li>Currently 360P download supported. Working on HD videos download</li>
         </ul>
       </div>
     </footer>
