--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,12 +95,16 @@
     
     <footer>
       <div class="copyright">
-        <ul class="">
+        <ul class="flex flex-a-i-center">
           <li>Developed By Ashish K</li>
-          <li>Currently 360P download supported. Working on HD videos download</li>
+          <li><a target="_blank" href="https://ashishkumar.hashnode.dev/">Blog URL</a></li>
+          <li><a target="_blank" href="https://npmjs.com/~codewithashish">npm packages</a></li>
+          <!-- <li>Currently 360P download supported. Working on HD videos download</li> -->
         </ul>
       </div>
     </footer>
+
+    Currently 360P videos download supported. Working on HD videos download
 </body>
 
 </html>
