--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,13 +70,13 @@
       </div>
     </div>
 
-    <!-- <footer>
+    <footer>
       <div class="copyright">
         <ul class="flex flex-a-i-center">
           <li>Developed By Ashish</li>
         </ul>
       </div>
-    </footer> -->
+    </footer>
 
     <p>Currently 360P videos download supported. Working on HD videos download</p>
 
