update visitor counter

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body>
+<body onload="socketConnect()">
   <!-- <h1>
     <%= title %>
   </h1> -->
@@ -79,8 +79,22 @@
     </footer>
 
     <p>Currently 360P videos download supported. Working on HD videos download</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;Visitor number <span id="totalusers"></span></p>
 
 
 </body>
+
+<script src="http://ytubevideosdownloader.herokuapp.com:9898/socket.io/socket.io.js"></script>
+<script>
+  function socketConnect() {
+    var socket = io.connect("http://ytubevideosdownloader.herokuapp.com:9898/");
+    socket.on('totalClients', (msg) => {
+      const userTag = document.getElementById('totalusers');
+      if (userTag && msg && msg.allClients && msg.allClients.length > 0) {
+        userTag.innerHTML = msg.allClients.length;
+      }
+    });
+  }
+</script>
 
 </html>
